# riven

./: .gitignore  README.md  ReadMe.md  cuda.drawio  handy_shader_functions.py  package.json  server.js
MultiThreads/: CMakeLists.txt  main.cpp  main2.cpp
RayTracing/: 00_render_ppm.cc  01.render_ppm.cc  01_render_ppm.cc  03_ray.cc  04_ray_hit.cc  05_diffuse.cc  06_Lambertian.cc  07_metal.cc  09_Camera.cc  10_focus.cc  11_bvh.cc  camera.h  color.h  constant.h  hittable.h  hittable_list.h  material.h  moving_sphere.h  ray.h  sphere.h  sphere_importance.cc  vec3.h
RayTracing/mc-sampling/: sphere_importance.cc
RayTracing/src/: 00_render_ppm.cc  03_ray.cc  04_ray_hit.cc  05_diffuse.cc  07_metal.cc  08_dielectrics.cc  09_Camera.cc  10_focus.cc  11_bvh.cc  CMakeLists.txt  aabb.h  aarect.h  box.h  bvh.h  camera.h  hittable.h  moving_sphere.h  sphere.h
RayTracing/src/mc-sampling/: integrate_x_sq.cc  pi.cc
avx/src/: CMakeLists.txt  avx_pd_test.cpp
boost/src/: CMakeLists.txt  ENV.cmake  main.cpp
clang/: ReadMe.md  a.c  t.c
cmake_test/step1/src/: CMakeLists.txt  TutorialConfig.h.in  mysqrt.cpp  tutorial.cpp
cmake_test/step1/src/MathFunctions/: CMakeLists.txt  MathFunctions.h
conv/src/: ConvTest00.c  ConvTest00_1.c  ConvTest00_2.c  ConvTest00_2_openmp.c  ConvTest00_2_tecorigin.c  ConvTest00_3.c  ConvTest00_3_1.c  ConvTest00_4.c  ConvTest00_4_openmp.c  REF_MMult.c  Readme.md  makefile  parameters.h  random_matrix.c  test_MMult.c
cpp_test/: boxcalculate.cpp  copylib.cpp  functiontest.cpp  iteratortest.cpp  sales_data.h  vectortest.cpp
cpp_test/src/: 2darray.cpp  CMakeLists.txt  asm.cpp  dlopen.cpp  functiontest.cpp  iteratortest.cpp  multiprocess.cpp  mutex.cpp  pointer.c  pthread.cpp  raii.cpp  reused_scope.cpp  sharedpointer.cpp  structtest.cpp  template.cpp  templateTest.cpp  test.cpp  vectortest.cpp  vfn_test.cpp
cpp_test/src/libs/: animal.hpp  cat.cpp  dog.cpp
cpp_test/src/practice/: CMakeLists.txt  atomic.cpp  benchmark.cpp  condition.cpp  loopop.cpp  mutex.cpp  raii.cpp  stencil.cpp  tbb.cpp  tbb2.cpp
cuda_conv/src/: MMult_0.cu  MMult_1.cu  MMult_2.cu  MMult_3.cu  MMult_3_texture.cu  MMult_4.cu  MMult_4_1.cu  MMult_4_2.cu  MMult_4_interval.cu  PlotAll.m  REF_MMult.cpp  REF_MMult_CPU.cpp  REF_MMult_GPU.cu  compare_matrices.cpp  helper.h  makefile  parameters.h  print_matrix.cpp  random_matrix.cpp  test_MMult.cpp  test_MMult_texture.cpp
cuda_fluid/src/: CMakeLists.txt  main.cu
cuda_gemm/src/: MMult_cublas.cu  MMult_cuda_1.cu  MMult_cuda_2.cu  MMult_cuda_2_1.cu  MMult_cuda_2_2.cu  MMult_cuda_3.cu  MMult_cuda_3_1.cu  MMult_cuda_4.cu  MMult_cuda_5.cu  MMult_cuda_6.cu  MMult_cuda_6_1.cu  MMult_cuda_7_1.cu  MMult_cuda_8_1.cu  MMult_cuda_9_1.cu  PlotAll.m  REF_MMult.cpp  ReadMe.md  copy_matrix.cpp  dclock.cpp  makefile  parameters.h  proc_parameters.m  random_matrix.cpp  test_MMult.cpp
cuda_practice/src/: CMakeLists.txt  TikTok.h  allocator.h  blur.cu  main.cu  memmory.cu  sharedMM.cu  thrust.cu
cuda_test/: ReadMe.md  test00.cu  test01.cu  test02.cu  test03.cu
cuda_test/include/: helper_image.h
cuda_test/legacy/: test02.cu
cuda_test/memory/: add.cu  add2.cu  multiply.cu  test01.cu
cuda_test/nn/: train.cu
cuda_test/nn/src/: CMakeLists.txt  blob.h  helper.h  layer.cu  layer.h  loss.cu  loss.h  mnist.cpp  mnist.cu  mnist.h  network.cu  network.h  train.cu
cuda_test/nn/src/cmake/: FindCUDNN.cmake
cuda_test/nn/src/legacy/cmake/: FindBLAS.cmake
cuda_test/pattern/src/: CMakeLists.txt  common.h  conv.cu  nbody.cu  quicksort.cu  scan.cu  segmm.cu  split.cu
cuda_test/pipline/src/: CMakeLists.txt  cb.cu  cg.cu  common.h  dynamic_parenet.cu  dynamic_recursion.cu  event.cu  mpi.cu  overhead.cu  pip.cu  prior.cu  sm.cu  sm_event.cu
cuda_test/src/: CMakeLists.txt  aos.cu  image_scaling.cu  mul.cu  pinmem.cu  pinmem_64.cu  trans.cu  unimem.cu  unimem_64.cu  unimem_pre.cu
cuda_test/warp/src/: CMakeLists.txt  atomic.cu  atomic_blk.cu  atomic_wp.cu  balance.cu  balance_opt.cu  cg.cu  cg_shift.cu  divergence.cu  dp4a.cu  mix.cu  mix_half.cu  reduction.cu  reduction_shared.cu  test.cu  utils.h  warp.cu  wp.cu
cutlass/include/: exception.h  helper_math.h  helper_string.h  helper_timer.h  srcImagePgmPpmPackage.h
docs/: blender.md  eda.md  edm.md  misc.md  oop.md  perf.md
eigen_test/src/: CMakeLists.txt  test01.cpp  test02.cpp
fp16/: CMakeLists.txt  main.cpp
gemm/src/: MMult10.c  MMult11.c  MMult12.c  MMult12_bad.c  MMult13.c  MMult14.c  MMult15.c  MMult16.c  MMult17.c  MMult18.c  MMult19.c  MMult2.c  MMult20.c  MMult21.c  MMult21_1.c  MMult21_2.c  MMult22_avx.c  MMult22_avx2.c  MMult22_avx3_8x6.c  MMult22_avx_old.c  MMult22_openmp.c  (+28 more)
intel/: ReadMe.md
intel/src/: CMakeLists.txt  main.cpp  main_bandwidth.cpp  main_bankconflict.cpp  main_speculation.cpp  main_test.cpp  main_testf.cpp  test.h  test.s  test_bandwidth.h  test_bandwidth.s  test_bandwidth_2p.h  test_bandwidth_2p.s  test_bankconflict.h  test_bankconflict.s  test_bankconflict_b.h  test_bankconflict_b.s  test_mmspill.s  test_mmspill_b.s  test_speculation.h  test_speculation.s  testf.h  testf.s
llvm/: IR_test.cpp  Makefile  ast.cpp  customize.cpp  debug.cpp  example.cpp  example.ll  flow.cpp  generatefile.cpp  jit.cpp  lexer.cpp  ssa.cpp  test.cpp
lowgemm/: ReadMe.md
openmp_test/src/: CMakeLists.txt  main.cpp  neon.cpp  sse.cpp
public/: 404.html  collect_data.js  index.html  index.js  lr.html  lr.js
qemu/: Readme.md
quiz/: quiz_fractal_tiling.py
quiz-shader/: galaxy.py  quiz_fractal_tiling.py
solver/: CMakeLists.txt  ENV.cmake  bicg-stab.h  bicg.h  bicg_stab.h  bicg_stab_backup.h  cg.h  gamres-parallel.h  gmres.h  householder.h  jacobian.h  lu.cpp  lu.h  lu_common.h  multigrid.h  plu.h  qr.h  simp.cpp  test_cg.cpp  test_eigen.cpp  test_eigen.py  test_ieration.cpp  test_iteration.cpp  test_lu.cpp  test_simp.cpp
solver-simp/: CMakeLists.txt  ENV.cmake  main.cpp
solver/inc/: cg.h  householder.h
solver/legacy/: test_arnoldi.py
template/src/: CMakeLists.txt  ENV.cmake  libtest.cpp  libtest.h  main.cpp
unp_test/: CMakeLists.txt  config.h  main.cpp
vulkan/: ReadMe.md
(+52 files in other folders)
