project(CPPTest)

add_executable(2darray.o 2darray.cpp)

add_executable(boxcalculate.o boxcalculate.cpp)

add_executable(copylib.o copylib.cpp)

add_executable(functiontest.o functiontest.cpp)

add_executable(iteratortest.o iteratortest.cpp)

# add_executable(sales_data.o sales_data.cpp)

add_executable(structtest.o structtest.cpp)

add_executable(template.o template.cpp)

add_executable(vectortest.o vectortest.cpp)